<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="500dp"
    android:layout_margin="10dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@color/blue"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/ivPhoto"
            android:text="@string/judul"
            android:maxLines="1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:maxLines="2"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/tvJudul"
            android:layout_toEndOf="@+id/ivPhoto"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>

