<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dicoding_event"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </LinearLayout>

            <!-- Upcoming Events Section -->
            <TextView
                android:id="@+id/upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_event"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_event_horizontal"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upcoming" />

            <TextView
                android:id="@+id/finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finished_event"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rvUpcoming"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFinished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_event"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/finished" />

            <ProgressBar
                android:id="@+id/prgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
